--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-250.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-343.9KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
   - {name: 未知国家-1.09MB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-647.0KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-250.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-309.0KB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-336.3KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇯🇵 日本-2.87MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇩🇪 德国-328.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 未知国家-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-647.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇩🇪 德国-328.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 未知国家-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-647.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇩🇪 德国-328.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 未知国家-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-647.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇩🇪 德国-328.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 未知国家-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-647.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇩🇪 德国-328.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 未知国家-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-647.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇩🇪 德国-328.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 未知国家-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-647.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇩🇪 德国-328.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 未知国家-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-647.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-250.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-309.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
+      - 🇩🇪 德国-328.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
