--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-7.29MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.98MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇺🇸 美国-788.9KB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-22.33MB/s(Youtube:不良林), server: 20.239.196.162, port: 38286, type: vmess, uuid: 48ca3feb-03fd-454a-903c-eaa459772412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-640.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-22.33MB/s(Youtube:不良林), server: 20.239.196.162, port: 38286, type: vmess, uuid: 48ca3feb-03fd-454a-903c-eaa459772412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: gcfree2.galaxy-cloud.icu, port: 443, type: vmess, uuid: 99498865-751d-4889-8349-51301fa3d930, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree2.galaxy-cloud.icu}}
+  - {name: 🇺🇸 美国-4.98MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: gcfree1.galaxy-cloud.icu, port: 443, type: vmess, uuid: 856fd239-43aa-499e-b56b-8af235c32fb5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree1.galaxy-cloud.icu}}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: gcfree1.galaxy-cloud.icu, port: 443, type: vmess, uuid: 99498865-751d-4889-8349-51301fa3d930, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree1.galaxy-cloud.icu}}
+  - {name: 🇯🇵 日本-4.92MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-640.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-640.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-640.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-640.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-640.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-640.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-640.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
