--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: gcfree1.galaxy-cloud.icu, port: 443, type: vmess, uuid: 99498865-751d-4889-8349-51301fa3d930, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree1.galaxy-cloud.icu}}
-  - {name: 🇩🇪 德国-1.13MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.23MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-714.9KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-7.92MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
-  - {name: 🇨🇳 中国-9.80MB/s(Youtube:不良林), server: gzyd.qlyun.xyz, port: 64663, type: ss, cipher: aes-128-gcm, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
-  - {name: 🇺🇸 美国-4.37MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.92MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.06MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-366.9KB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12224, type: vmess, uuid: 9ea70d57-9cb6-3bd0-ae41-5601e516dcc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 18443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇯🇵 日本-761.7KB/s(Youtube:不良林), server: gy02.20220512.cyou, port: 37762, type: trojan, password: 207eed47-ffdd-4bd4-91c1-719ac25c9cee, sni: gy02.20220512.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-611.7KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-714.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-714.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-714.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-714.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-714.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-714.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-714.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-611.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
